--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "connect-flash": "0.1.x",
     "node-inspector": "0.1.x",
     "q": "0.9.x",
-    "i": "latest"
+    "i": "latest",
+    "stripe": "latest"
   }
 }
