starting basic auth, then wrapping up calls

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "i": "latest",
     "stripe": "latest",
     "nodetime": "latest",
-    "markdown": "latest"
+    "markdown": "latest",
+    "express-namespace": "latest"
   }
 }
