--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "passport-local": "latest",
     "passport-facebook": "latest",
     "passport-twitter": "latest",
+    "passport-http": "latest",
     "bcrypt": "latest",
     "socket.io": "0.9.x",
     "express-partials": "latest",
