--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "socket.io": "0.9.x",
     "express-partials": "latest",
     "underscore": "1.4.x",
+    "underscore.string": "latest",
     "async": "0.2.x",
     "request": "2.x",
     "debug": "0.7.x",
