--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "debug": "0.7.x",
     "node-uuid": "1.x",
     "redis": "0.8.x",
-    "connect-redis": "1.4.x",
+    "connect-mongo": "latest",
     "connect-flash": "0.1.x",
     "node-inspector": "0.1.x",
     "q": "0.9.x",
